# PyRathole

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pyrathole/: Cargo.toml  README.md
rathole/.github/workflows/: release.yml  rust.yml
rathole/examples/tls/: identity.pfx  rootCA.crt  rootCA.key  server.crt  server.key
rathole/src/: lib.rs  main.rs
rathole/tests/: integration_test.rs
rathole/tests/common/: mod.rs
rathole/tests/config_test/valid_config/: full.toml
src/: lib.rs
