[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyrathole"
version = "0.1.0"
description = "Python bindings for rathole reverse tunneling proxy"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "zZedix", email = "your-email@example.com"}
]
keywords = ["rathole", "tunnel", "proxy", "networking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Networking",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/zZedix/PyRathole"
Repository = "https://github.com/zZedix/PyRathole"
Issues = "https://github.com/zZedix/PyRathole/issues"
